k8sapps/k8s-cluster-deploy/monitor_deploy/grafana_service.yaml
#
# Create at 2019-01-29, build grafana ui for backend prometheus.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: localhost:5000/grafana
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
      volumes:
      - emptyDir: {}
        name: grafana-storage

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana  # select for pods
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001

---
