k8sapps/k8s-cluster-deploy/monitor_deploy/prometheus_grafana_ingress.yaml
#
# Create at 2019-02-02, build prometheus and grafana ingress interface.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
#   kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.monitor.prometheus.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: prometheus-service
          servicePort: 9090

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
#   kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.monitor.grafafa.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: grafana-service
          servicePort: 3000

---
